Fix frontend-backend integration and update authentication